# specmap-mcp

./: .gitignore  ACTION-ITEMS-2025-10-19.md  GITHUB-SETUP.md  LICENSE  MCP-FIXES-APPLIED.md  MCP-SETUP-REVIEW.md  NEXT-SESSION-TODO.md  README.md  SESSION-CLOSEOUT-2025-10-25-part2.md  SESSION-CLOSEOUT-2025-10-25-part3.md  SESSION-CLOSEOUT-2025-10-25.md  SESSION-SYSTEM-IMPLEMENTATION.md  TRACKING.md  VORTXX-INSTALL-CHECKLIST.md  VORTXX-PHASE2-INSTALLATION.md  VORTXX-QUICK-START.md  existing_code_reference.md  mcp_directory_structure.md  pyproject.toml  setup.py  specmap_mcp_install.sh  specmap_mcp_installer.py  test_specify.py
.claude/: settings.local.json
.claude/skills/: README.md  specmap-charter-helper.md  (+5 more)
backups/: TRACKING-2025-10-18-EOD.md
docs/: FOLDER-MANAGEMENT.md  SESSION-MANAGEMENT.md  SKILLS.md  SPECMAP-DEPLOYMENT-GUIDE.md  VORTXX-DEPLOYMENT-PLAN.md
mcp-server/: README.md  setup.py  specmap_mcp_readme.md  specmap_mcp_setup.py  specmap_mcp_test.py
scripts/: README.md  backup-project.py  deploy-skills-to-project.bat  deploy-skills-to-project.sh  new-session.py  restore-session.py  session-checkpoint.py  session-end.py  session-start.py  update-tracking.py
session-summaries/: 2025-10-18.md  2025-10-19.md  README.md  TEMPLATE.md
specmap-guide/: README.md  SESSION-CLOSEOUT-2025-09-26.md  SETUP.md  TRACKING-SYSTEM-IMPLEMENTATION.md  rulemap-prd-workflow-guide.md  rulemap-unified-prd-guide.md  speckit-rulemap-integration-design.md  specmap-ai-context-v2.0-DISTRIBUTION.md  test_specify.py
templates/: TRACKING-ID-SYSTEM.md
tests/: test_skills.py
(+36 files in other folders)
